<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LostAndFoundKampus</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="kategori">Kategori</string>
    <string name="lokasi_waktu">Lokasi • Waktu</string>
    <string name="foto_barang">Foto Barang</string>
    <string name="lost_amp_found"><![CDATA[Lost & Found]]></string>
    <string name="unm_kampus">UNM Kampus</string>
    <string name="cari_barang_hilang">Cari barang hilang...</string>
    <string name="_24">24</string>
    <string name="total_laporan">Total Laporan</string>
    <string name="barang_terbaru">Barang Terbaru</string>
    <string name="_4_hasil">4 hasil</string>
    <string name="_18">18</string>
    <string name="berhasil">Berhasil</string>
    <string name="_6">6</string>
    <string name="proses">Proses</string>
</resources>